# utfc

./: Dockerfile  README.md  __init__.py  baseline_results.json  client.py  environment.py  graders.py  inference.py  local_test.py  models.py  openenv.yaml  pyproject.toml  threat_generator.py
server/: app.py  requirements.txt
